Fix content overlap with sidebar on desktop

--- a/CritterClient/CritterClient/app.css
+++ b/CritterClient/CritterClient/app.css
@@ -62,15 +62,21 @@ h1, h2, h3, h4 { font-family: 'Bubblegum Sans'; }
     background-image: url("img/print-pattern.png"), -o-linear-gradient(top, rgba(8,158,210,1) 0%, rgba(103,205,69,1) 100%);
     background-image: url("img/print-pattern.png"), -ms-linear-gradient(top, rgba(8,158,210,1) 0%, rgba(103,205,69,1) 100%);
     background-image: url("img/print-pattern.png"), linear-gradient(to bottom, rgba(8,158,210,1) 0%, rgba(103,205,69,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#089ed2', endColorstr='#67cd45', Grad*/ientType=0 );     
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#089ed2', endColorstr='#67cd45', Grad*/ientType=0 );
     background-repeat: repeat;
+}
+#sidebar, #sidebar-placeholder {
+    width: 260px;
     height: 100% !important;
+    float:left;
+}
+#sidebar-placeholder {
+    display:inline-block;
 }
 
 .sidebar {
     position: fixed;
     z-index: 1000;
-    width: 260px;
 }
 
 @media(max-width:768px){
